@@ -1,4 +1,5 @@
 6.0.12
+Create AppInfo cache on creating a new compiler folder
 
 6.0.11
 Issue 3420 New-BcImage uses hyperv even if it is disabled
